# arcturus_lychee

./: .gitignore  README.md  main.py  main_plant_classification.py  pyproject.toml
arcturus_lychee/configuration/: __init__.py  basic_template.py
arcturus_lychee/datasets/: __init__.py  basic_classification_dataset.py  generic_augmentations.py
arcturus_lychee/experimental/: fp8_anealing.py
arcturus_lychee/helpers/: __init__.py  classification_metrics_display.py  distributed.py  image_directory.py  reproducibility.py  speedster_tracker.py  training_logging.py
arcturus_lychee/models/: __init__.py
arcturus_lychee/models/architecture/: efficient_net_v2.py  mobile_net.py
arcturus_lychee/models/block/: basic_layers.py
arcturus_lychee/trainers/: basic_classification.py  wrapper_classification.py  wrapper_f8_anealing_classifier.py
