[project]
name = "arcturus-lychee"
version = "0.1.0"
description = "Aditya Simple Training Template, To Fork"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "annotated-types==0.7.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "einops==0.8.2",
    "filelock==3.29.0",
    "fonttools==4.63.0",
    "fsspec==2026.4.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "narwhals==2.23.0",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "opencv-python-headless==5.0.0.93",
    "packaging==24.1",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "setuptools==81.0.0",
    "simsimd==6.5.16",
    "six==1.17.0",
    "stringzilla==4.6.2",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tomli-w==1.2.0",
    "torch==2.13.0+cu126",
    "torchvision==0.28.0+cu126",
    "tqdm==4.68.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }